--- a/src/components/EditableToy.module.css
+++ b/src/components/EditableToy.module.css
@@ -1,14 +1,34 @@
-.formContainer {
-  margin: 1.5em;
-}
-
-.img {
-  max-width: 20%;
-  height: auto;
-  margin-top: 15px;
+.editableToysContainer {
+  text-align: left;
+  list-style-type: none;
 }
 
 .editableToy {
-  margin-bottom: 2em;
-  display: grid;
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin-bottom: 50px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.editableToy img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+
+  background-color: var(--primary);
+  border: 1px solid var(--primary-dark);
+  border-radius: 3px;
+  color: var(--text-on-dark);
+  cursor: pointer;
+
+  &:disabled {
+    background-color: color-mix(in srgb, var(--primary) 40%, white 60%);
+    cursor: not-allowed;
+  }
 }
