--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -36,3 +36,11 @@
   display: flex;
   align-items: center;
 }
+
+.notificationCount {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 4px 8px;
+  margin-left: 4px;
+}
