--- a/src/components/ReadMore.module.css
+++ b/src/components/ReadMore.module.css
@@ -35,6 +35,11 @@
   }
 }
 
+.btn:hover,
+.btnClose:hover {
+  background-color: var(--primary-light);
+}
+
 .btnClose {
   padding: 0.5rem 1rem;
   background-color: rgb(38, 31, 31);
