--- a/src/components/Admin.module.css
+++ b/src/components/Admin.module.css
@@ -1,3 +1,10 @@
+.categorySelect {
+  padding: 4px;
+  margin: 5px;
+  margin-left: 0;
+  margin-top: 2px;
+}
+
 .adminContainer {
   max-width: 800px;
   margin: 0 auto;
