--- a/src/components/ToysListItem.module.css
+++ b/src/components/ToysListItem.module.css
@@ -34,12 +34,12 @@
   margin-top: 15px;
 }
 
-.toysList button {
-  display: block;
-  width: 70%;
-  margin: 0 auto;
-  padding: 10px;
-  margin-top: 10px;
+.btnContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.btn {
   background-color: var(--primary);
   color: var(--text-on-dark);
   border: none;
@@ -51,9 +51,11 @@
   background-color: var(--primary-light);
 }
 
-.starRating {
+.iconButton {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  outline: none;
 }
 
 .outOfStock {
@@ -73,13 +75,6 @@
 @media (min-width: 601px) and (max-width: 1024px) {
   .toysList {
     grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 600px) {
-  .toysList button {
-    font-size: 0.9em;
-    width: 60%;
   }
 }
 
