Got rid of unnecessary global css

--- a/src/features/Auth/Auth.module.css
+++ b/src/features/Auth/Auth.module.css
@@ -8,9 +8,28 @@
   background-color: #fff;
 }
 
-h1 {
+.title {
   text-align: center;
   color: var(--primary-dark);
+}
+
+.btn {
+  padding: 1rem 1.5rem;
+
+  background-color: var(--primary);
+  border: 1px solid var(--primary-dark);
+  border-radius: 3px;
+  color: var(--text-on-dark);
+  cursor: pointer;
+
+  &:disabled {
+    background-color: color-mix(in srgb, var(--primary) 40%, white 60%);
+    cursor: not-allowed;
+  }
+}
+
+.btn:hover {
+  background-color: var(--primary-light);
 }
 
 .label {
