--- a/src/components/Toys/Profile.module.css
+++ b/src/components/Toys/Profile.module.css
@@ -17,7 +17,8 @@
   margin-bottom: 15px;
 }
 
-.brandForm button {
+.btn,
+.submitBtn {
   background-color: var(--primary);
   color: var(--text-on-dark);
   border: none;
@@ -26,13 +27,17 @@
   border-radius: 4px;
 }
 
-@media (max-width: 600px) {
-  .brandForm {
-    padding: 50px;
-  }
+.submitBtn:hover {
+  background-color: var(--primary-light);
 }
 
 .fieldError {
   color: var(--error-color);
   margin-top: 0;
+}
+
+@media (max-width: 600px) {
+  .brandForm {
+    padding: 50px;
+  }
 }
